# image-tool-assortment

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
basic/: Cargo.toml
basic/src/: main.rs  palettes.rs
common-utils/: Cargo.toml
common-utils/src/: effectlog.rs  image.rs  lib.rs  palette.rs
gif-effect/: Cargo.toml
gif-effect/src/: frame.rs  main.rs  palettes.rs
imgtoy/: Cargo.toml  MANUAL.md  option.yaml
imgtoy/src/: effects.rs  example-config.yaml  main.rs  source.rs
imgtoy/src/effects/: mod.rs
imgtoy/src/logging/: alt.rs  mod.rs
imgtoy/src/parsers/: mod.rs  ordered.rs  palette.rs  util.rs
imgtoy/src/parsers/effects/: gradient_map.rs  mod.rs  quantize_hue.rs
imgtoy/src/parsers/error_propagator/: mod.rs
imgtoy/src/parsers/modifiers/: checker.rs  diagonal_direction.rs  increase_strategy.rs  mirror.rs  mod.rs  orientation.rs  rotation.rs  simple.rs  wrapping.rs
imgtoy/src/parsers/ordered/: mod.rs
imgtoy/src/parsers/properties/: mod.rs
imgtoy/src/parsers/system/: mod.rs
imgtoy/src/parsers/system/tools/: complex_primitive.rs  mod.rs  parameter_list.rs  parameter_range.rs  primitive.rs  property.rs
nasa-apod-generator/: Cargo.toml
nasa-apod-generator/src/: base.rs  gradients.rs  main.rs  nasa.rs  palettes.rs  utils.rs
src/: main.rs  nasa.rs
