[package]
name = "common-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
image-effects = "0.1.0"
palette = "0.7.2"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
base64 = "0.21.2"
rand = "0.8.5"