[package]
name = "gif-effect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.12.0"
image = "0.24.7"
image-effects = "0.1.0"
palette = "0.7.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
common-utils = { path = "../common-utils" }
rand = "0.8.5"
