[package]
name = "imgtoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
image-effects = "0.1.0"
indicatif = "0.17.6"
palette = "0.7.2"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = "1.0.185"
serde_yaml = "0.9.25"
