[package]
name = "nasa-apod-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
image = "0.24.6"
image-filters = { git = "https://github.com/enbyss/image-filters" }
palette = "0.7.2"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
