[package]
name = "nasa-apod-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
dotenv = "0.15.0"
eggbug = "0.2.0"
futures = { version = "0.3.28", features = ["executor"] }
image = "0.24.6"
image-effects = { git = "https://github.com/enbyss/image-filters" }
job_scheduler = "1.2.1"
palette = "0.7.2"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["macros"] }
common-utils = { path = "../common-utils" }
clokwerk = "0.4.0"
